fixed bugs, pydicom version ... compille attempt 1010

--- a/.github/workflows/auto_cont.yml
+++ b/.github/workflows/auto_cont.yml
@@ -1,4 +1,4 @@
-name: Build AMIGOpy (unsigned)
+name: Build AMIGOpy (GUI) and Segmentator API (unsigned)
 
 on:
   push:
@@ -6,69 +6,93 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-windows:
+  build-amigo-gui:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Miniconda
+      - name: Setup Miniconda (GUI env)
         uses: conda-incubator/setup-miniconda@v3
         with:
           miniconda-version: "latest"
           python-version: "3.11"
-          environment-file: amigo.yml
+          environment-file: amigo.yml        # <- light env for GUI only
           activate-environment: amigo
+          auto-update-conda: true
 
-      - name: Upgrade pip
+      - name: Upgrade pip tooling
         shell: powershell
         run: python -m pip install --upgrade pip wheel setuptools
 
-      # ---- Minimal deps for AMIGOpy GUI ----
-      - name: Install build dependency (PyInstaller for GUI)
+      - name: Install PyInstaller for GUI
         shell: powershell
         run: pip install pyinstaller
 
-      - name: PyInstaller (AMIGOpy GUI)
+      - name: Build AMIGOpy GUI (PyInstaller onedir)
         shell: powershell
         run: pyinstaller Launch_ImGUI.spec --clean
 
-      # ---- Heavy deps only for the API ----
-      - name: Install build dependencies (API + TS stack)
-        shell: powershell
-        run: |
-          pip install fastapi uvicorn[standard] starlette pydantic python-multipart
-          pip install SimpleITK nibabel scikit-image scipy tqdm einops packaging
-          pip install monai==1.* nnunetv2
-          pip install --index-url https://download.pytorch.org/whl/cpu torch torchvision
-          pip install totalsegmentator
-
-      - name: PyInstaller (Segmentator API, OneDir)
-        shell: powershell
-        run: pyinstaller segmentator_api.spec --clean
-
-      # ---- Build Windows installers via Inno Setup ----
       - name: Install Inno Setup
         shell: powershell
         run: choco install innosetup -y
 
-      - name: Build Windows installer (AMIGOpy)
+      - name: Build AMIGOpy installer (compile.iss)
         shell: powershell
-        run: '& "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" compile.iss'
+        run: '& "${env:ProgramFiles(x86)}\Inno Setup 6\ISCC.exe" compile.iss'
 
-      - name: Build Windows installer (Segmentator API)
-        shell: powershell
-        run: '& "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" SegmentatorAPI.iss'
-
-      # ---- Upload exactly one file per artifact (so one file per zip) ----
       - name: Upload AMIGOpy installer (unsigned)
         uses: actions/upload-artifact@v4
         with:
           name: AMIGOpy-Installer-unsigned
-          path: Output/mysetup.exe
+          path: Output/AMIGOpy-Setup.exe
           if-no-files-found: error
           overwrite: true
+
+  build-segmentator-api:
+    runs-on: windows-latest
+    needs: []   # independent from GUI build
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Miniconda (API env)
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          miniconda-version: "latest"
+          python-version: "3.11"
+          # you can use a separate env file amigo_api.yml if you prefer
+          activate-environment: amigo_api
+          auto-update-conda: true
+
+      - name: Create API env
+        shell: powershell
+        run: |
+          conda create -y -n amigo_api python=3.11
+          conda activate amigo_api
+          python -m pip install --upgrade pip wheel setuptools
+          pip install pyinstaller
+          pip install fastapi uvicorn[standard] starlette pydantic typing_extensions python-multipart
+          pip install SimpleITK nibabel scikit-image scipy tqdm einops packaging
+          pip install monai==1.* nnunetv2
+          pip install --index-url https://download.pytorch.org/whl/cpu torch torchvision
+          pip install totalsegmentator dicom2nifti "pydicom>=2.4,<3"
+
+      - name: Build Segmentator API (PyInstaller onedir)
+        shell: powershell
+        run: |
+          conda activate amigo_api
+          pyinstaller segmentator_api.spec --clean
+
+      - name: Install Inno Setup
+        shell: powershell
+        run: choco install innosetup -y
+
+      - name: Build Segmentator API installer (SegmentatorAPI.iss)
+        shell: powershell
+        run: '& "${env:ProgramFiles(x86)}\Inno Setup 6\ISCC.exe" SegmentatorAPI.iss'
 
       - name: Upload Segmentator API installer (unsigned)
         uses: actions/upload-artifact@v4
