--- a/amigo.yml
+++ b/amigo.yml
@@ -26,8 +26,8 @@ dependencies:
   - brotli-bin=1.0.9=h8ffe710_7
   - brotli-python=1.0.9=py311hd77b12b_7
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2025.7.9=h4c7d964_0
-  - certifi=2025.7.9=pyhd8ed1ab_0
+  - ca-certificates=2025.8.3=h4c7d964_0
+  - certifi=2025.8.3=pyhd8ed1ab_0
   - cffi=1.16.0=py311h2bbff1b_0
   - cfitsio=3.470=h0af3d06_7
   - chardet=4.0.0=py311haa95532_1003
@@ -162,7 +162,6 @@ dependencies:
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycodestyle=2.10.0=py311haa95532_0
   - pycparser=2.21=pyhd3eb1b0_0
-  - pydicom=2.4.3=pyhd8ed1ab_0
   - pydocstyle=6.3.0=py311haa95532_0
   - pyflakes=3.0.1=py311haa95532_0
   - pygments=2.15.1=py311haa95532_1
@@ -262,18 +261,67 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_0
   - zstd=1.5.5=hd43e919_0
   - pip:
+      - acvl-utils==0.2.5
+      - annotated-types==0.7.0
+      - anyio==4.10.0
+      - argparse==1.4.0
+      - batchgenerators==0.25.1
+      - batchgeneratorsv2==0.3.0
+      - blosc2==3.7.0
       - bm3d==4.0.1
       - bm4d==4.2.3
+      - connected-components-3d==3.24.0
       - contourpy==1.1.1
       - cycler==0.11.0
+      - dicom2nifti==2.6.2
+      - dynamic-network-architectures==0.4.2
+      - einops==0.8.1
+      - fastapi==0.116.1
+      - fft-conv-pytorch==1.2.0
+      - filelock==3.18.0
       - fonttools==4.42.1
+      - fsspec==2025.7.0
+      - future==1.0.0
+      - h11==0.16.0
+      - huggingface-hub==0.34.4
       - kiwisolver==1.4.5
+      - linecache2==1.0.0
       - matplotlib==3.8.0
       - mplcursors==0.5.3
+      - mpmath==1.3.0
+      - msgpack==1.1.1
+      - ndindex==1.10.0
+      - nnunetv2==2.6.2
       - pip==25.1.1
+      - py-cpuinfo==9.0.0
+      - pyarrow==21.0.0
+      - pydantic==2.11.7
+      - pydantic-core==2.33.2
+      - pydicom==3.0.1
       - pyparsing==3.1.1
       - python-gdcm==3.0.24.1
+      - python-graphviz==0.21
+      - python-multipart==0.0.20
+      - safetensors==0.6.2
+      - scikit-learn==1.7.1
+      - seaborn==0.13.2
       - simpleitk==2.5.2
+      - sniffio==1.3.1
+      - starlette==0.47.2
+      - sympy==1.14.0
+      - threadpoolctl==3.6.0
+      - timm==1.0.19
+      - torch==2.7.1+cu118
+      - torchaudio==2.7.1+cu118
+      - torchvision==0.22.1+cu118
+      - totalsegmentator==2.10.0
+      - tqdm==4.67.1
+      - traceback2==1.4.0
       - typing-extensions==4.14.0
+      - typing-inspection==0.4.1
+      - unittest2==1.1.0
+      - uvicorn==0.35.0
       - vtk==9.2.6
+      - xvfbwrapper==0.2.13
+      - yacs==0.1.8
 prefix: C:\Users\gabriel.paivafonseca\AppData\Local\anaconda3\envs\amigo
