--- a/amigo.yml
+++ b/amigo.yml
@@ -300,7 +300,7 @@ dependencies:
       - pydicom==3.0.1
       - pyparsing==3.1.1
       - python-gdcm==3.0.24.1
-      - python-graphviz==0.21
+      - graphviz==0.20.3
       - python-multipart==0.0.20
       - safetensors==0.6.2
       - scikit-learn==1.7.1
