--- a/amigo_api.yml
+++ b/amigo_api.yml
@@ -17,15 +17,12 @@ dependencies:
   - python-multipart
   - requests
   - pip:
-      # Use CPU wheels from the official PyTorch index (no "+cu118" spec):
-      - --index-url=https://download.pytorch.org/whl/cpu
+      - --extra-index-url=https://download.pytorch.org/whl/cpu
       - torch
       - torchvision
-      # Segmentation stack
       - monai==1.*
       - nnunetv2
       - totalsegmentator==2.10.0
-      # API stack
       - fastapi
       - uvicorn[standard]
       - starlette
